# SmartDiary

./: .gitignore  README.md  address_book.py  addressbook.pkl  main.py  pyproject.toml  readme.txt  requirements.txt
smartdiary/: address_book.py  commands_processing.py  decorators.py  help_generator.py  load_save_data.py  main.py  note  notes_book.py
