[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartdiary"
version = "0.1.0"
description = "Описание вашего проекта"
authors = [
    {name = "Ваше имя", email = "your.email@example.com"},
]
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}

dependencies = [ #pip freeze > requirements.txt
    # Укажите зависимости здесь, например:
    # "requests>=2.25.1",
    "setuptools",
    "wheel",
    "certifi>=2024.8.30",
    "chardet>=4.0.0",
    "click>=8.1.3",
    "charset-normalizer==3.4.0",
    "colorama==0.4.6",
    "cryptography==40.0.2",
    "idna==3.10",
    "prettytable==3.12.0",
    "prompt_toolkit==3.0.48",
    "urllib3==2.2.3",
    "wcwidth==0.2.13"
]

# Укажите главный модуль для вызова через консоль
[project.scripts]
smartdiary = "smartdiary.main:main"